# rflax

./: .gitignore  README.org  pyproject.toml  setup.py
conf/: config.yaml
conf/cql/: default.yaml
conf/ddpg/: default.yaml
conf/dqn/: default.yaml
conf/sac/: default.yaml
conf/td3/: default.yaml
examples/: actor_critic.py  cql.py  ddpg.py  dqn.py  ppo_brax.py  reinforce.py  sac.py  td3.py
rflax/: logging.py  type_hints.py  types.py  utils.py
rflax/agents/: __init__.py  actor_critic.py  cql.py  ddpg.py  dqn.py  reinforce.py  sac.py  td3.py
rflax/common/: dist.py  gae.py  utils.py
rflax/components/: blocks.py  initializers.py  loss.py  noise.py
rflax/components/nets/: policy.py  value.py
rflax/ppo/: net.py  train.py  update.py
