[tool.poetry]
name = "rflax"
version = "0.1.0"
description = "RL algorithms implemented via JAX."
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
license = "MIT"
packages = [
  { include = "rflax" }
]

[tool.poetry.dependencies]
python = ">=3.9"
jax = ">=0.4.12"
flax = ">=0.6.10"
optax = ">=0.1.5"
distrax = ">=0.1.3"
dejax = { git = "https://github.com/gzqaq/dejax.git" }
jutils = { git = "https://github.com/gzqaq/jutils.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
